Mejoras CSS y JS

--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Communicationg between a Webpage and Arduino</title>
+    <title>IoT-Proyetcs</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
     <link rel="stylesheet" href="./estilos.css">
 </head>
 <body>
 
-    <h1>Comunicacion entre Web y Arduino</h1>
+    <div class="center">
+        <h1>Iot Controller</h1>
 
-    <button id="lightOn">Encender ON</button>
-    <button id="lightOff">Apagar OFF</button>
-
-    <div class="switch-button">
-        <!-- Checkbox -->
-        <input type="checkbox" name="switch-button" id="switch-label" class="switch-button__checkbox">
-        <!-- Botón -->
-        <label for="switch-label" class="switch-button__label"></label>
+        <input type="checkbox" name="" id="obj1">
+        <input type="checkbox" name="" id="obj2">
+        <input type="checkbox" name="" id="obj3">
     </div>
     
 </body>
 <script src="./script.js"></script>
-<script src="./script2.js"></script>
 </html>
